containers/proxy/envoy.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - name: omnition_ingress_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 15001
    transparent: true
    listener_filters:
    - name: envoy.listener.original_dst
    #- name: envoy.listener.text_protocol_inspector
    - name: envoy.listener.tls_inspector

    filter_chains:
    - filter_chain_match:
        application_protocols: http/1.1
        transport_protocol: tls
      filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: omnition
          codec_type: AUTO
          generate_request_id: true
          use_remote_address: true
          tracing:
            operation_name: ingress
          route_config:
            name: http1_route
            virtual_hosts:
            - name: http1_vhost
              required_tls: true
              domains:
              - '*'
              routes:
              - match:
                  prefix: /
                route:
                  cluster: http1_ingress_cluster
          http_filters:
          - name: envoy.grpc_http1_bridge
            config: {}
          - name: envoy.router
            config: {}
      tls_context:
        common_tls_context:
          tls_certificates:
          - certificate_chain:
              inline_string: |-
                -----BEGIN CERTIFICATE-----
                MIIEaTCCAtGgAwIBAgIRAOE9B139zjlv5U7Ag2zLL+owDQYJKoZIhvcNAQELBQAw
[...]
                fMnlLb6KOWiJfx7H2f/JLRQ9yV4abo9l4/xGDps=
                -----END CERTIFICATE-----
            private_key:
              inline_string: |-
                -----BEGIN PRIVATE KEY-----
                MIIEvgIBADANBgkqhkiG9w0BAQEFAASCBKgwggSkAgEAAoIBAQCzsmV8DZH+9Qqh
[...]
                GDvsBuR0WVzZTQqIBMSPAY76
                -----END PRIVATE KEY-----
    - filter_chain_match:
        application_protocols: http/2
        transport_protocol: tls
      filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: omnition
          codec_type: AUTO
          generate_request_id: true
          use_remote_address: true
          tracing:
            operation_name: ingress
          route_config:
            name: http2_route
            virtual_hosts:
            - name: http2_vhost
              required_tls: true
              domains:
              - '*'
              routes:
              - match:
                  prefix: /
                route:
                  cluster: http2_ingress_cluster
          http_filters:
          - name: envoy.grpc_http1_bridge
            config: {}
          - name: envoy.router
            config: {}
      tls_context:
        common_tls_context:
          tls_certificates:
          - certificate_chain:
              inline_string: |-
                -----BEGIN CERTIFICATE-----
                MIIEYjCCAsqgAwIBAgIQNWbg5y9tPqDD6/nhXVeN0DANBgkqhkiG9w0BAQsFADBP
[...]
                HHWqs+bzYBhCrvu3SIja5y53WDo6uA==
                -----END CERTIFICATE-----
            private_key:
              inline_string: |-
                -----BEGIN PRIVATE KEY-----
                MIIEvAIBADANBgkqhkiG9w0BAQEFAASCBKYwggSiAgEAAoIBAQDwYftFSf6I2ahd
[...]
                RutHq8vi1zWOgqArHndMcQ==
                -----END PRIVATE KEY-----


    - filter_chain_match:
        application_protocols: http/1.1
      filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: omnition
          codec_type: AUTO
          generate_request_id: true
          use_remote_address: true
          tracing:
            operation_name: ingress
          route_config:
            name: tcp_http2_route
            virtual_hosts:
            - name: tcp_http2_vhost
              domains:
              - '*'
              require_ssl: true
              routes:
              - match:
                  prefix: /
                redirect:
                  path_redirect: /
                  https_redirect: true
          http_filters:
          - name: envoy.grpc_http1_bridge
            config: {}
          - name: envoy.router
            config: {}



    - filters:
      - name: envoy.tcp_proxy
        config:
          stat_prefix: ingress_tcp
          cluster: tcp_ingress_cluster




  - name: omnition_egress_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 15002
    transparent: true
    listener_filters:
    - name: envoy.listener.original_dst
    #- name: envoy.listener.text_protocol_inspector
    - name: envoy.listener.tls_inspector

    filter_chains:
    - filter_chain_match:
        application_protocols: http/1.1
      filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: omnition
          codec_type: AUTO
          generate_request_id: true
          use_remote_address: true
          tracing:
            operation_name: egress
          route_config:
            name: e_http1_route
            virtual_hosts:
            - name: e_http1_vhost
              domains:
              - '*'
              routes:
              - match:
                  prefix: /
                route:
                  cluster: http1_egress_cluster
          http_filters:
          - name: envoy.grpc_http1_bridge
            config: {}
          - name: envoy.router
            config: {}

    - filter_chain_match:
        application_protocols: http/2
      filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: omnition
          codec_type: AUTO
          generate_request_id: true
          use_remote_address: true
          tracing:
            operation_name: egress
          route_config:
            name: http2_route
            virtual_hosts:
            - name: http2_vhost
              required_tls: true
              domains:
              - '*'
              routes:
              - match:
                  prefix: /
                route:
                  cluster: http2_egress_cluster
          http_filters:
          - name: envoy.grpc_http1_bridge
            config: {}
          - name: envoy.router
            config: {}

    - filters:
      - name: envoy.tcp_proxy
        config:
          stat_prefix: egress_tcp
          cluster: tcp_egress_cluster

  clusters:
  - name: http1_ingress_cluster
    connect_timeout: 0.5s
    type: ORIGINAL_DST
    lb_policy: ORIGINAL_DST_LB

  - name: http1_egress_cluster
    connect_timeout: 1s
    type: ORIGINAL_DST
    lb_policy: ORIGINAL_DST_LB
    tls_context:
      common_tls_context:
        validation_context:
          trusted_ca:
            inline_string: |-
              -----BEGIN CERTIFICATE-----
              MIIEbjCCAtagAwIBAgIRAJHa93ssnYORz70N2t7ahrAwDQYJKoZIhvcNAQELBQAw
[...]
              7HyGfN9vlFBh+uc2F4JL/3qrqq31vyDeVpBP8BluRB94gQ==
              -----END CERTIFICATE-----


  - name: http2_ingress_cluster
    connect_timeout: 0.5s
    type: ORIGINAL_DST
    lb_policy: ORIGINAL_DST_LB
    features: http2
    http2_protocol_options:
      max_concurrent_streams: 2147483647

  - name: http2_egress_cluster
    connect_timeout: 0.5s
    type: ORIGINAL_DST
    lb_policy: ORIGINAL_DST_LB
    features: http2
    http2_protocol_options:
      max_concurrent_streams: 2147483647
    tls_context:
      common_tls_context:
        validation_context:
          trusted_ca:
            inline_string: |-
              -----BEGIN CERTIFICATE-----
              MIIEbjCCAtagAwIBAgIRAJHa93ssnYORz70N2t7ahrAwDQYJKoZIhvcNAQELBQAw
[...]
              7HyGfN9vlFBh+uc2F4JL/3qrqq31vyDeVpBP8BluRB94gQ==
              -----END CERTIFICATE-----

  - name: tcp_ingress_cluster
    connect_timeout: 0.5s
    type: ORIGINAL_DST
    lb_policy: ORIGINAL_DST_LB

  - name: tcp_egress_cluster
    connect_timeout: 0.5s
    type: ORIGINAL_DST
    lb_policy: ORIGINAL_DST_LB

  - name: zipkin_cluster
    connect_timeout: 1s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: zipkin.opsoss.svc.cluster.local
        port_value: 9411
        #tracing:
        #  http:
        #   name: envoy.zipkin
        # config:
        #collector_cluster: zipkin_cluster
        #collector_endpoint: /api/v1/spans
