containers/proxy/envoy_tls_example.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:

  - name: omnition_egress_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 15002
    traffic_direction: OUTBOUND
    transparent: true
    listener_filters:
      - name: envoy.listener.original_dst
      - name: envoy.listener.tls_inspector

    filter_chains:

    - filter_chain_match:
        application_protocols: "http/1.1"
      filters:
        - name: envoy.http_connection_manager
          typed_config:
            "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
            stat_prefix: omnition
            codec_type: AUTO
            generate_request_id: true
            use_remote_address: true
            tracing:
              operation_name: egress
            route_config:
                name: http_route
                virtual_hosts:
                - name: http_vhost
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: "/"
                    route: { cluster: http_egress_cluster }
            http_filters:
            - name: envoy.grpc_http1_bridge
              config: {}
            - name: envoy.router
              config: {}

    - filter_chain_match:
        application_protocols: "h2"
      filters:
        - name: envoy.http_connection_manager
          config:
            stat_prefix: omnition
            codec_type: AUTO
            generate_request_id: true
            use_remote_address: true
            tracing:
              operation_name: egress
            route_config:
                name: http2_route
                virtual_hosts:
                - name: http2_vhost
                  domains: ["*"]
                  routes:

                  - match:
                      prefix: "/"
                    route:
                      cluster: http2_egress_cluster

            http_filters:
            - name: envoy.grpc_http1_bridge
              config: {}
            - name: envoy.router
              config: {}

    - filters:
      - name: envoy.tcp_proxy
        typed_config:
          '@type': type.googleapis.com/envoy.config.filter.network.tcp_proxy.v2.TcpProxy
          stat_prefix: egress_tcp
          cluster: tcp_egress_cluster



  - name: omnition_ingress_listener
    address:
      socket_address: { address: 0.0.0.0, port_value: 15001 }
    transparent: true
    traffic_direction: INBOUND
    listener_filters:
      - name: envoy.listener.original_dst
      - name: envoy.listener.tls_inspector

    filter_chains:
    - filter_chain_match:
        application_protocols: "http/1.1"
      filters:
        - name: envoy.http_connection_manager
          type_config:
            '@type': type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
            stat_prefix: omnition
            codec_type: AUTO
            generate_request_id: true
            use_remote_address: true
            tracing:
              operation_name: ingress
            route_config:
                name: http_route
                virtual_hosts:
                - name: http_vhost
                  domains: ["*"]
                  #domains:
                  #- "srv1.default.svc.cluster.local"
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: http_ingress_cluster
            http_filters:
            - name: envoy.grpc_http1_bridge
              config: {}
            - name: envoy.router
              config: {}

      tls_context:
        common_tls_context:
          tls_certificates:
            - certificate_chain:
                inline_string: "-----BEGIN CERTIFICATE-----\nMIIEGTCCAoGgAwIBAgIRAOj9u8G01lT4W0DekGw3h4kwDQYJKoZIhvcNAQELBQAw\nTzEeMBwGA1UEChMVbWtjZXJ0IGRldmVsb3BtZW50IENBMRIwEAYDVQQLDAlvd2Fp\nc0BYUFMxGTAXBgNVBAMMEG1rY2VydCBvd2Fpc0BYUFMwHhcNMTgwODAyMTk1MTMw\nWhcNMjgwODAyMTk1MTMwWjA9MScwJQYDVQQKEx5ta2NlcnQgZGV2ZWxvcG1lbnQg\nY2VydGlmaWNhdGUxEjAQBgNVBAsMCW93YWlzQFhQUzCCASIwDQYJKoZIhvcNAQEB\nBQADggEPADCCAQoCggEBALMyypF4FEEm1x8SO3AVB3tJ1il0Z6yCXfmQ8lVhEd5i\nKTBFNUC5ulof2rIHRn6rDjN9UlL3bDhU6jJnUxNNqpd [...]
              private_key:
                inline_string: "-----BEGIN PRIVATE KEY-----\nMIIEvAIBADANBgkqhkiG9w0BAQEFAASCBKYwggSiAgEAAoIBAQCzMsqReBRBJtcf\nEjtwFQd7SdYpdGesgl35kPJVYRHeYikwRTVAubpaH9qyB0Z+qw4zfVJS92w4VOoy\nZ1MTTaqXad1qwRBR+Yz+biMt1Ry8EcNIPnliWSOCMNSeFtM+1MRKGsxYslucMDIS\ncI4sCZb6Zd8vR2htSLbu2S1MNak88z4CVQ7qu+OnVjM7NFyTCzTU255dPlU51QNi\nCj6PrOGaWhP+KpGUiMXjczBK+5on4ZMOcwTeG7dy/kmqYbqdmRFJuDSnKOIRCRkr\ncan2+oOni9v+XOGIHM5TLrkJ7kflIR+0T5YWrYc42tAPH1CFpIc8/EP9zbpQmWTP\nty/gU4d7AgMBAAECggEAOmY9GfdWMn1j8h5Q/I/95jI [...]

    - filter_chain_match:
        application_protocols: "h2"
      filters:
        - name: envoy.http_connection_manager
          typed_config:
            '@type': type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
            stat_prefix: omnition
            codec_type: AUTO
            generate_request_id: true
            use_remote_address: true
            tracing:
              operation_name: egress
            route_config:
                name: http2_route
                virtual_hosts:
                - name: http2_vhost
                  domains: ["*"]
                  routes:

                  - match:
                      prefix: "/"
                    route:
                      cluster: http2_ingress_cluster

            http_filters:
            - name: envoy.grpc_http1_bridge
              config: {}
            - name: envoy.router
              config: {}

    - filters:
      - name: envoy.tcp_proxy
        typed_config:
          '@type': type.googleapis.com/envoy.config.filter.network.tcp_proxy.v2.TcpProxy
          stat_prefix: ingress_tcp
          cluster: tcp_ingress_cluster

  clusters:
  - name: http_egress_cluster
    connect_timeout: 0.25s
    type: ORIGINAL_DST
    lb_policy: CLUSTER_PROVIDED

  - name: http2_egress_cluster
    connect_timeout: 0.25s
    type: ORIGINAL_DST
    lb_policy: CLUSTER_PROVIDED
    features: "http2"
    http2_protocol_options: {}

  - name: tcp_egress_cluster
    connect_timeout: 0.25s
    type: ORIGINAL_DST
    lb_policy: CLUSTER_PROVIDED

  - name: http_ingress_cluster
    connect_timeout: 0.25s
    type: ORIGINAL_DST
    lb_policy: CLUSTER_PROVIDED

  - name: http2_ingress_cluster
    connect_timeout: 0.25s
    type: ORIGINAL_DST
    lb_policy: CLUSTER_PROVIDED
    features: "http2"
    http2_protocol_options: {}

  - name: tcp_ingress_cluster
    connect_timeout: 0.25s
    type: ORIGINAL_DST
    lb_policy: CLUSTER_PROVIDED

  - name: zipkin_cluster
    connect_timeout: 1s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: ${ZIPKIN_HOST}
        port_value: ${ZIPKIN_PORT}

tracing:
  http:
    name: envoy.zipkin
    config:
      collector_cluster: tracing_zipkin_cluster
      collector_endpoint: /api/v2/spans
      collector_endpoint_version: HTTP_JSON
